--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "@heroicons/react": "^2.0.15",
     "next": "latest",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
