--- a/package.json
+++ b/package.json
@@ -7,7 +7,10 @@
   },
   "dependencies": {
     "@heroicons/react": "^2.0.15",
+    "dotenv-webpack": "^2.0.0",
+    "env-variable": "^0.0.6",
     "next": "latest",
+    "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-icons": "^4.7.1"
