--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@heroicons/react": "^2.0.15",
     "dotenv-webpack": "^2.0.0",
     "env-variable": "^0.0.6",
+    "firebase": "^9.19.1",
     "next": "^13.3.1-canary.4",
     "next-auth": "^4.22.0",
     "react": "18.2.0",
