--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "start": "next start"
   },
   "dependencies": {
-    "@heroicons/react": "^2.0.15",
+    "@heroicons/react": "^2.0.17",
     "dotenv-webpack": "^2.0.0",
     "env-variable": "^0.0.6",
     "firebase": "^9.19.1",
@@ -14,6 +14,7 @@
     "next-auth": "^4.22.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.1.1",
     "react-icons": "^4.7.1"
   },
   "devDependencies": {
