--- a/package.json
+++ b/package.json
@@ -10,8 +10,10 @@
     "dotenv-webpack": "^2.0.0",
     "env-variable": "^0.0.6",
     "firebase": "^9.19.1",
+    "firebase-admin": "^11.6.0",
     "next": "^13.3.1-canary.4",
     "next-auth": "^4.22.0",
+    "openai": "^3.2.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
