--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
     "react-dom": "18.2.0",
     "react-firebase-hooks": "^5.1.1",
     "react-hot-toast": "^2.4.0",
-    "react-icons": "^4.7.1"
+    "react-icons": "^4.7.1",
+    "react-select": "^5.7.2",
+    "swr": "^2.1.3"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
