--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "react-hot-toast": "^2.4.0",
     "react-icons": "^4.7.1",
     "react-select": "^5.7.2",
-    "swr": "^2.1.3"
+    "swr": "^2.1.3",
+    "tailwind-scrollbar": "^3.0.0"
   },
   "devDependencies": {
     "@types/node": "18.11.3",
